repaired toolbar vertical overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -66,8 +66,6 @@ button, i {
     width: 399px;
     border-left: 1px solid black;
     background: white;
-    display: flex;
-    flex-flow: column;
     overflow: scroll;
 }
 #tools {
@@ -104,11 +102,7 @@ button, i {
     display: flex;
     flex-flow: column;
     align-items: center;
-    /* position: relative; */
 }
-/* #active-node-parents {
-    margin-top: 5em;
-} */
 .active-child {
     text-align: center;
     width: 80%;
